# SDVenturers

./: .gitmodules  README.md
adas-drive-mode/: Cargo.toml  Dockerfile  README.md  adas-drive-mode.yaml
adas-drive-mode/src/: main.rs
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/driverstatecluster4/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/driverstatecluster4/: MainActivity.kt
android-app/app/src/main/java/com/example/driverstatecluster4/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/example/driverstatecluster4/: ExampleUnitTest.kt
android-app/gradle/wrapper/: gradle-wrapper.properties
cluster_app/: requirements.txt
cluster_app/mqtt_test_apps/: mqtt_sub.py
face-recognition/: README.md  face.py
python-dashboard/ankaios/: cluster_ui.yaml
python-dashboard/mqtt_test_apps/: publisher.py
python-dashboard/scripts/: cluster_ui.py  cluster_ui_fix.py  manual_control.py
