[package]
name = "adas-drive-mode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
up-rust = { version = "0.7.0", default-features = false }
up-transport-mqtt5 = { git = "https://github.com/eclipse-uprotocol/up-transport-mqtt5-rust" }
